# google-trends-daily-data-preprocessing

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  google_trends_design_summary.md  google_trends_stitching_analytical_plan.md  materials_for_report.md  pyproject.toml
data/raw/: historical_monthly.parquet  weekly.parquet
interim/baseline/: alpha_estimates.pkl  diagnostics.pkl  stitched_series.parquet
interim/hierarchical/: alpha_estimates.pkl  diagnostics.pkl  stitched_series.parquet
nb/: 01_data_collection.ipynb  02_baseline_stitching.ipynb  03_hierarchical_stitching.ipynb  04_hierarchical_dow_stitching.ipynb  04b_chunk_diagnostics.ipynb  05_robustness_testing.ipynb  06_final_comparison.ipynb  07_smooth_alpha_stitching.ipynb  08_state_space_stitching.ipynb  10_final_comparison.ipynb
new_methods/: additional_stitching_methods_research.md  implementation_plan_bayesian_hierarchical.py  implementation_plan_total_variation.py  stitching_methods_research_summary.md
reports/: baseline_summary.txt  chunk_diagnostics_hierarchical.csv  chunk_diagnostics_hierarchical.txt  final_recommendation.txt  hierarchical_dow_summary.txt  hierarchical_summary.txt  overlap_sensitivity.csv  phase3_completion.txt  robustness_summary.txt  smooth_alpha_summary.txt  stage0_audit.txt  state_space_summary.txt  temporal_cv_results.csv  weight_sensitivity.csv
results/: hierarchical_final.csv  hierarchical_final.parquet  hierarchical_metadata.csv  smooth_alpha_final.csv  smooth_alpha_final.parquet  smooth_alpha_metadata.csv
src/: api.py  config.py  utils.py  validation.py
(+25 files in other folders)
