[project]
name = "google-trends-stitching"
version = "0.1.0"
description = "Google Trends daily data stitching via hierarchical optimization"
requires-python = ">=3.13"
readme = "README.md"
authors = [
    {name = "Mikhail Arutyunov"}
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
stats = [
    "statsmodels>=0.14.0",
]
viz = [
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nbconvert>=7.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
